--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h3>
-            <a href="#" class="logo">Instant</a>
+            <a href="#" class="logo">Amed< Wael/a>
         </h3>
         <ul>
             <li><a href="#" class="active"> Home</a></li>
